--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -167,6 +167,7 @@
     opacity: 1;
     transition: all 0.3s;
     z-index: 1;
+    width: 100%;
   }
 
   .nav-links {
